--- a/features/list/src/main/res/values/strings.xml
+++ b/features/list/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="data_loading_error">Data loading error</string>
     <string name="favorites">Favorites</string>
     <string name="movies">Movies</string>
+    <string name="menu_action_refresh">Refresh</string>
+
 </resources>
