Adds Youbaraj solution

--- a/features/list/src/main/res/values/strings.xml
+++ b/features/list/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="data_loading_error">Data loading error</string>
     <string name="favorites">Favorites</string>
     <string name="movies">Movies</string>
+    <string name="refresh">Refresh</string>
+    <string name="refreshinglist">Refreshing list..</string>
 </resources>
