--- a/features/favorites/src/main/res/values/strings.xml
+++ b/features/favorites/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">favorites</string>
     <string name="activity_label">Favorites</string>
+    <string name="no_data">There is no data to display</string>
 </resources>
