--- a/features/favorites/src/main/res/values/strings.xml
+++ b/features/favorites/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">favorites</string>
     <string name="activity_label">Favorites</string>
-    <string name="no_data">There is no data to display</string>
+    <string name="no_data">No favorites to display</string>
+    <string name="detail_deeplink">app://movies/detail?imdbID=</string>
 </resources>
