--- a/features/favorites/src/main/res/values/strings.xml
+++ b/features/favorites/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="activity_label">Favorites</string>
 
     <string name="data_loading_error">Data loading error</string>
+    <string name="no_favourite_movies_yet">No favourite movies yet!</string>
 </resources>
