--- a/features/favorites/src/main/res/values/strings.xml
+++ b/features/favorites/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">favorites</string>
     <string name="activity_label">Favorites</string>
+    <string name="no_favorite_movie">No favorite movies founds</string>
+    <string name="favorite_movie_loaded">Favorite movies loaded</string>
 </resources>
