--- a/features/list/src/main/res/values/strings.xml
+++ b/features/list/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">list</string>
     <string name="search">Search</string>
-    <string name="data_loading_error">Data loading error</string>
+    <string name="data_loading_error">Data loading error\nSwipe to retry</string>
     <string name="favorites">Favorites</string>
     <string name="movies">Movies</string>
 </resources>
