Favorites is working.

--- a/features/favorites/src/main/res/values/strings.xml
+++ b/features/favorites/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">favorites</string>
-    <string name="activity_label">Favorites</string>
+    <string name="favorites_name">Favorites</string>
+    <string name="favorites_error_data">No favorites.</string>
 </resources>
