--- a/features/list/src/main/res/values/strings.xml
+++ b/features/list/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">list</string>
     <string name="search">Search</string>
     <string name="data_loading_error">Data loading error</string>
+    <string name="try_to_reload">Try to reload</string>
     <string name="favorites">Favorites</string>
     <string name="movies">Movies</string>
 </resources>
