Fix challenges 4 & 5 & (6 need to fix detail display)

--- a/features/favorites/src/main/res/values/strings.xml
+++ b/features/favorites/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">favorites</string>
     <string name="activity_label">Favorites</string>
+    <string name="no_favorite_movies_found">No favorite movies found</string>
 </resources>
