--- a/features/favorites/src/main/res/values/strings.xml
+++ b/features/favorites/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">favorites</string>
     <string name="activity_label">Favorites</string>
+    <string name="data_loading_error">Data loading error</string>
+    <string name="no_favorites_message">No favorites saved</string>
+    <string name="favorites">Favorites</string>
 </resources>
